@@ -109,6 +109,13 @@ InterpDelProc(ClientData clientdata, Tcl_Interp *interp)
                 delete qrdet;
                 break;
             }
+#if CV_VERSION_GREATER_OR_EQUAL(4, 5, 1)
+            case OPENCV_TEXTDETECTEAST: {
+                cv::dnn::TextDetectionModel_EAST *east = (cv::dnn::TextDetectionModel_EAST *) cvo->obj;
+                delete east;
+                break;
+            }
+#endif
 #endif
             case OPENCV_BOWTRAINER: {
                 cv::BOWKMeansTrainer *bowkmeanstrainer = (cv::BOWKMeansTrainer *) cvo->obj;
@@ -466,6 +473,13 @@ Opencv_DESTRUCTOR(ClientData cd)
             delete qrdet;
             break;
         }
+#if CV_VERSION_GREATER_OR_EQUAL(4, 5, 1)
+        case OPENCV_TEXTDETECTEAST: {
+            cv::dnn::TextDetectionModel_EAST *east = (cv::dnn::TextDetectionModel_EAST *) cvo->obj;
+            delete east;
+            break;
+        }
+#endif
 #endif
         case OPENCV_BOWTRAINER: {
             cv::BOWKMeansTrainer *bowtrainer = (cv::BOWKMeansTrainer *) cvo->obj;
@@ -547,6 +561,12 @@ Opencv_NewHandle(void *cd, Tcl_Interp *interp, Opencv_Type type, void *obj)
         prefix = "cv-qdetect";
         proc = QRCodeDetector_FUNCTION;
         break;
+#if CV_VERSION_GREATER_OR_EQUAL(4, 5, 1)
+    case OPENCV_TEXTDETECTEAST:
+        prefix = "cv-textdetecteast";
+        proc = TEXTDETECT_EAST_FUNCTION;
+        break;
+#endif
 #endif
     case OPENCV_BOWTRAINER:
         prefix = "cv-bowktrainer";
@@ -1718,6 +1738,10 @@ Opencv_Init(Tcl_Interp *interp)
           (Tcl_ObjCmdProc *) dnn_readNet },
         { "dnn::NMSBoxes",
           (Tcl_ObjCmdProc *) dnn_NMSBoxes },
+#if CV_VERSION_GREATER_OR_EQUAL(4, 5, 1)
+        { "dnn::TextDetectionModel_EAST",
+          (Tcl_ObjCmdProc *) TextDetectionModel_EAST },
+#endif
 #endif
 
         /*
