@@ -1,3 +1,7 @@
+2021-10-23 Danilo Chang
+
+	* Implement command: TextDetectionModel_EAST
+
 2021-10-22 Danilo Chang
 
 	* Add CV_VERSION_GREATER_OR_EQUAL macro
